fix: center background grid, vertically align card columns

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -8,6 +8,8 @@
     linear-gradient(to right, rgba(225,232,235,.1)  1px, transparent 1px),
     linear-gradient(to bottom, rgba(225,232,235,.1)  1px, transparent 1px);
   border-bottom: 1px solid rgba(225,232,235,.1);
+  border-top: 1px solid rgba(225,232,235,.1);
+  background-position: center top;
 }
 .cards-wrapper {
   gap: 3rem;
@@ -85,7 +87,7 @@
 
 @media (max-width: 480px) {
   .about-wrapper {
-    height: 140vh;
+    height: 120vh;
     flex-direction: row;
     padding: 0 1rem;
   }
@@ -94,17 +96,14 @@
     height: 100%;
     flex-direction: column;
   }
-  .category-wrapper > h1 {
-    font-size: 1.25rem;
-  }
   .cards-wrapper {
     flex-direction: column;
     gap: 2rem;
   }
   .about-card-wrapper {
-    width: 11rem;
-    height: 200px;
-    gap: .25rem;
+    width: 10rem;
+    height: 15rem;
+    gap: .5rem;
   }
   .about-card-wrapper:hover {
     transform: none;
@@ -120,5 +119,12 @@
   }
   .the-guy-behind-wrapper {
     transform: translate(5rem);
+  }
+  .the-guy-behind-title {
+    text-align: end;
+  }
+  .category-title {
+    margin-top: 1rem;
+    width: auto;
   }
 }
